--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@types/multer": "^1.4.12",
         "bcrypt": "^5.1.1",
+        "cloudinary": "^2.4.0",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-rate-limit": "^7.4.0",
+        "i18n": "^0.15.1",
         "ioredis": "^5.4.1",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
+        "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.14",
         "pg": "^8.12.0",
@@ -41,6 +45,7 @@
         "@eslint/js": "^9.9.1",
         "@types/bcrypt": "^5.0.2",
         "@types/express": "^4.17.21",
+        "@types/i18n": "^0.13.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.4.2",
         "@types/node-cron": "^3.0.11",
