--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@types/node-cron": "^3.0.11",
         "@types/nodemailer": "^6.4.15",
         "@types/sequelize": "^4.28.20",
+        "@types/socket.io": "^3.0.2",
         "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^6.3.1",
         "eslint": "^8.57.0",
