--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.3",
         "socket.io": "^4.7.5",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "winston": "^3.14.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
